8272448: [lworld] C2 compilation fails with "Bad graph detected in build_loop_late"